crates/toml/tests/snapshots/invalid/array/no-close-table-02.stderr
TOML parse error at line 1, column 17
  |
1 | x = [{ key = 42 #
  |                 ^
comments are unsupported in inline tables, expected nothing

---
TOML parse error at line 1, column 19
  |
1 | x = [{ key = 42 #
  |                   ^
unclosed inline table, expected `}`

---
TOML parse error at line 1, column 16
  |
1 | x = [{ key = 42 #
  |                ^
unclosed array, expected `]`
